modified html and css

--- a/index.html
+++ b/index.html
@@ -68,6 +68,67 @@
             <h3>Hydrogen VS Electric Cars</h3>
             <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
             <div class="horizontal-line"></div>
+            <div class="middle-offer-section">
+              <h3>The Downsides of AI Artistry</h3>
+              <p>
+                What are the possible adverse effects of on-demand AI image
+                generation?
+              </p>
+            </div>
+
+            <div class="horizontal-line"></div>
+            <div class="bottom-offer-section">
+              <h3>Is VC Funding Drying Up?</h3>
+              <p>
+                Private funding by VC firms is down 50% YOY. We take a look at
+                what that means.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="gaming-container">
+        <div class="retro-container">
+          <div class="retro-image-container">
+            <img
+              class="retro-image"
+              src="./assets/images/image-retro-pcs.jpg"
+              alt=""
+            />
+          </div>
+          <div class="retro-description">
+            <h3>01</h3>
+            <h4>Reviving Retro PCs</h4>
+            <p>What happens when old PCs are given modern upgrades?</p>
+          </div>
+        </div>
+        <div class="laptop-container">
+          <div class="laptop-image-container">
+            <img
+              class="laptop-image"
+              src="./assets/images/image-top-laptops.jpg"
+              alt=""
+            />
+          </div>
+          <div class="laptop-description">
+            <h3>02</h3>
+            <h4>Top 10 Laptops of 2022</h4>
+            <p>Our best picks for various needs and budgets.</p>
+          </div>
+        </div>
+        <div class="growth-container">
+          <div class="growth-image-container">
+            <img
+              class="growth-image"
+              src="./assets/images/image-gaming-growth.jpg"
+              alt=""
+            />
+          </div>
+
+          <div class="growth-description">
+            <h3>03</h3>
+            <h4>The Growth of Gaming</h4>
+            <p>How the pandemic has sparked fresh opportunities.</p>
           </div>
         </div>
       </div>
