update html and css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,27 @@
           <li>Categories</li>
         </ul>
       </nav>
+      <div class="hamburger-menu">
+        <img src="./assets/images/icon-menu.svg" alt="" />
+        <div class="sidebar">
+          <ul class="sidebar-links">
+            <li>Home</li>
+            <li>New</li>
+            <li>Popular</li>
+            <li>Trending</li>
+            <li>Categories</li>
+          </ul>
+          <div class="sidebar-close-button">
+            <img
+              class="close-image"
+              src="./assets/images/icon-menu-close.svg"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
     </header>
+
     <main>
       <div class="grid-container">
         <div class="left-section">
